--- a/python/flask/fundamentals/counter/static/style.css
+++ b/python/flask/fundamentals/counter/static/style.css
@@ -5,11 +5,15 @@
 .top{
     display: flex;
     justify-content: space-around;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     padding: 20px;
+}
+.card{
+    padding: 20px 20px 50px 20px;
 }
 .buttons{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
