updates to dojo survey

--- a/python/flask/fundamentals/dojo_survey/templates/index.html
+++ b/python/flask/fundamentals/dojo_survey/templates/index.html
@@ -66,7 +66,7 @@
                         <label>C#</label>
                     </div>
                     <div class="form-check">
-                        <input name="lang" value="C++"" class="form-check-input" type="checkbox">
+                        <input name="lang" value="C++" class="form-check-input" type="checkbox">
                         <label>C++</label>
                     </div>
                     <div class="form-check">
