--- a/python/flask_mysql/crud/users/static/css/style.css
+++ b/python/flask_mysql/crud/users/static/css/style.css
@@ -3,8 +3,8 @@
     margin: 0;
 }
 .card{
-    padding: 20px 100px 20px 100px;
-
+    padding: 0 50px 0 50px;
+    border: none;
 }
 .card-header{
     background-color: #9AA087;
@@ -17,8 +17,24 @@
     background-color: #C8CDBA;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 15px;
 }
 th, td{
     text-align: center;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+ul{
+    border: #9AA087 solid 2px;
+}
+.card-footer{
+    background-color: #9AA087;
+    color: white;
+}
+.form-floating{
+    padding: 5px;
+    background-color: #C8CDBA;
 }
