--- a/python/flask_mysql/crud/users/templates/add_user.html
+++ b/python/flask_mysql/crud/users/templates/add_user.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <title>Add User</title>
+    <title>Create</title>
 </head>
 <body>
     <form action="/user/create" method="post" class="card">
@@ -15,7 +15,6 @@
             <h1>Add new user!</h1>
             <a href="/users" class="navbar-text">Home</a>
         </div>
-        <div  class="card-body">
             <div class="form-floating">
                 <input type="text" name="first_name" class="form-control">
                 <label for="first_name">First name:</label>
@@ -28,10 +27,9 @@
                 <input type="text" name="email" class="form-control">
                 <label for="email">Email:</label>
             </div>
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <button type="submit" value="Create User" class="btn btn-outline-dark">Create</button>
+            <div class="card-body">
+                <button type="submit" value="Create User" class="btn btn-outline-dark">Create User</button>
             </div>
-        </div>
     </form>
 </body>
 </html>
