--- a/python/flask_mysql/crud/users/templates/index.html
+++ b/python/flask_mysql/crud/users/templates/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-    <title>Users</title>
+    <title>Read (All)</title>
 </head>
 <body>
     <div class="card">
@@ -22,6 +22,7 @@
                         <th>Last Name</th>
                         <th>Email</th>
                         <th>Created At</th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -30,7 +31,12 @@
                         <td>{{ user.first_name }}</td>
                         <td>{{ user.last_name }}</td>
                         <td>{{ user.email }}</td>
-                        <td>{{ user.created_at }}</td>
+                        <td>{{ user.created_at.strftime('%B %d, %Y') }}</td>
+                        <td>
+                            <a href="/user/show/{{user.id}}" class="navbar-text">Show</a> |
+                            <a href="/user/edit/{{user.id}}" class="navbar-text">Edit</a> |
+                            <a href="/user/delete/{{user.id}}" class="navbar-text">Delete</a>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
